// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`utils > getFolders > should be able to return the correct folders when method options are provided 1`] = `
{
  "actualFolder": "methodActual",
  "baselineFolder": "methodBase",
  "diffFolder": "methodDiff",
}
`;

exports[`utils > getFolders > should be able to return the correct folders when no method options are provided 1`] = `
{
  "actualFolder": "folderActual",
  "baselineFolder": "/current/test/path/",
  "diffFolder": "folderDiff",
}
`;

exports[`utils > getInstanceData > should return instance data for a mobile app with incomplete capability data 1`] = `
{
  "appName": "",
  "browserName": "not-known",
  "browserVersion": "not-known",
  "deviceName": "not_known",
  "devicePixelRatio": 3.5,
  "devicePlatformRect": {
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBar": {
      "height": 144,
      "width": 100,
      "x": 0,
      "y": 0,
    },
  },
  "deviceScreenSize": {
    "height": 200,
    "width": 100,
  },
  "isAndroid": true,
  "isIOS": false,
  "isMobile": true,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "not-known",
  "platformVersion": "not-known",
}
`;

exports[`utils > getInstanceData > should return instance data for an Android mobile app 1`] = `
{
  "appName": "android.apk",
  "browserName": "not-known",
  "browserVersion": "not-known",
  "deviceName": "android emulator",
  "devicePixelRatio": 3.5,
  "devicePlatformRect": {
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBar": {
      "height": 144,
      "width": 100,
      "x": 0,
      "y": 0,
    },
  },
  "deviceScreenSize": {
    "height": 200,
    "width": 100,
  },
  "isAndroid": true,
  "isIOS": false,
  "isMobile": true,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "android",
  "platformVersion": "14.0",
}
`;

exports[`utils > getInstanceData > should return instance data for an iOS iPad mobile app 1`] = `
{
  "appName": "ios.zip",
  "browserName": "not-known",
  "browserVersion": "not-known",
  "deviceName": "ipad",
  "devicePixelRatio": 0,
  "devicePlatformRect": {
    "homeBar": {
      "height": 9,
      "width": 276,
      "x": 279,
      "y": 1179,
    },
    "statusBar": {
      "height": 24,
      "width": 834,
      "x": 0,
      "y": 0,
    },
  },
  "deviceScreenSize": {
    "height": 1194,
    "width": 834,
  },
  "isAndroid": false,
  "isIOS": false,
  "isMobile": true,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "ios",
  "platformVersion": "17.0",
}
`;

exports[`utils > getInstanceData > should return instance data for an iOS iPad mobile app for a non matching screensize 1`] = `
{
  "appName": "ios.zip",
  "browserName": "not-known",
  "browserVersion": "not-known",
  "deviceName": "ipad",
  "devicePixelRatio": 0,
  "devicePlatformRect": {
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBar": {
      "height": 20,
      "width": 1234,
      "x": 0,
      "y": 0,
    },
  },
  "deviceScreenSize": {
    "height": 888,
    "width": 1234,
  },
  "isAndroid": false,
  "isIOS": false,
  "isMobile": true,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "ios",
  "platformVersion": "17.0",
}
`;

exports[`utils > getInstanceData > should return instance data for an iOS iPad mobile app in landscape mode 1`] = `
{
  "appName": "ios.zip",
  "browserName": "not-known",
  "browserVersion": "not-known",
  "deviceName": "ipad",
  "devicePixelRatio": 0,
  "devicePlatformRect": {
    "homeBar": {
      "height": 9,
      "width": 276,
      "x": 279,
      "y": 1179,
    },
    "statusBar": {
      "height": 24,
      "width": 1194,
      "x": 0,
      "y": 0,
    },
  },
  "deviceScreenSize": {
    "height": 834,
    "width": 1194,
  },
  "isAndroid": false,
  "isIOS": false,
  "isMobile": true,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "ios",
  "platformVersion": "17.0",
}
`;

exports[`utils > getInstanceData > should return instance data for an iOS iPhone mobile app 1`] = `
{
  "appName": "ios.zip",
  "browserName": "not-known",
  "browserVersion": "not-known",
  "deviceName": "iphone 15 pro",
  "devicePixelRatio": 0,
  "devicePlatformRect": {
    "homeBar": {
      "height": 9,
      "width": 143,
      "x": 125,
      "y": 837,
    },
    "statusBar": {
      "height": 59,
      "width": 393,
      "x": 0,
      "y": 0,
    },
  },
  "deviceScreenSize": {
    "height": 852,
    "width": 393,
  },
  "isAndroid": false,
  "isIOS": false,
  "isMobile": true,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "ios",
  "platformVersion": "17.0",
}
`;

exports[`utils > getInstanceData > should return instance data when the browserstack capabilities are provided 1`] = `
{
  "appName": "not-known",
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "samsung galaxy s22",
  "devicePixelRatio": 1,
  "devicePlatformRect": {
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "deviceScreenSize": {
    "height": 200,
    "width": 100,
  },
  "isAndroid": true,
  "isIOS": false,
  "isMobile": true,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "not-known",
}
`;

exports[`utils > getInstanceData > should return instance data when the lambdatest capabilities are provided 1`] = `
{
  "appName": "not-known",
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "samsung galaxy s22 lt",
  "devicePixelRatio": 1,
  "devicePlatformRect": {
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "deviceScreenSize": {
    "height": 200,
    "width": 100,
  },
  "isAndroid": true,
  "isIOS": false,
  "isMobile": true,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": {
    "deviceName": "Samsung Galaxy S22 LT",
    "platformVersion": "11",
  },
  "platformName": "osx",
  "platformVersion": "11",
}
`;

exports[`utils > getInstanceData > should return instance data when the minimum of capabilities is provided 1`] = `
{
  "appName": "not-known",
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "not_known",
  "devicePixelRatio": 1,
  "devicePlatformRect": {
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "deviceScreenSize": {
    "height": 0,
    "width": 0,
  },
  "isAndroid": false,
  "isIOS": false,
  "isMobile": false,
  "logName": "",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "not-known",
}
`;

exports[`utils > getInstanceData > should return instance data when wdio-ics option log name is provided 1`] = `
{
  "appName": "not-known",
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "not_known",
  "devicePixelRatio": 1,
  "devicePlatformRect": {
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "deviceScreenSize": {
    "height": 0,
    "width": 0,
  },
  "isAndroid": false,
  "isIOS": false,
  "isMobile": false,
  "logName": "wdio-ics-logName",
  "name": "",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "not-known",
}
`;

exports[`utils > getInstanceData > should return instance data when wdio-ics option name is provided 1`] = `
{
  "appName": "not-known",
  "browserName": "chrome",
  "browserVersion": "75.123",
  "deviceName": "not_known",
  "devicePixelRatio": 1,
  "devicePlatformRect": {
    "homeBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "statusBar": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
  },
  "deviceScreenSize": {
    "height": 0,
    "width": 0,
  },
  "isAndroid": false,
  "isIOS": false,
  "isMobile": false,
  "logName": "",
  "name": "wdio-ics-name",
  "nativeWebScreenshot": false,
  "platformName": "osx",
  "platformVersion": "not-known",
}
`;
